--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', sans-serif;
+  text-decoration: none;
+  list-style: none;
+}
+
+body {
+  background-color: #924DBF;
+}
+
+.container {
+  width: 1280px;
+  margin: 0 auto;
+}
